# video-server

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh  test_pipeline.sh  vcpkg.json
build-fresh/: CMakeCache.txt  Makefile  cmake_install.cmake  video-serverConfig.cmake
cmake/: video-serverConfig.cmake.in
docs/: architecture_overview.md  configuration_and_filters.md  getting_started.md  raw_frames_to_webrtc.md  security_model.md  session_lifecycle.md  soak_testing.md  video_server.md
examples/nicegui_smoke/: README.md  app.py  requirements.txt  run_smoke.sh  smoke_server.toml  synthetic_webrtc_smoke_server.cpp  test_ui_helpers.py  ui_helpers.py
examples/vcpkg_example/: CMakeLists.txt  main.cpp  run.sh  vcpkg.json
include/video_server/: encoded_access_unit_view.h  managed_video_server.h  observability.h  raw_video_pipeline.h  stream_config.h  stream_output_config.h  video_frame_view.h  video_server.h  video_stream_info.h  video_types.h  webrtc_video_server.h
src/core/: video_pixel_format_utils.cpp  video_pixel_format_utils.h  video_server_core.cpp  video_server_core.h  video_types.cpp
src/pipeline/: libav_pixel_format_mapping.h  raw_h264_encoder_backend.h  raw_to_h264_pipeline.cpp
src/testing/: soak_test_framework.cpp  soak_test_framework.h  synthetic_frame_generator.cpp  synthetic_frame_generator.h
src/transforms/: display_transform.cpp  display_transform.h
src/webrtc/: frame_http_encoder.cpp  frame_http_encoder.h  http_api_server.cpp  http_api_server.h  logging_utils.h  managed_video_server.cpp  signaling_server.cpp  signaling_server.h  webrtc_stream.cpp  webrtc_stream.h  webrtc_video_server.cpp
tests/: test_core.cpp  test_main.cpp  test_managed_server.cpp  test_pipeline.cpp  test_raw_pipeline.cpp  test_soak_framework.cpp  test_synthetic.cpp  test_transforms.cpp  test_video_types.cpp  test_webrtc_http.cpp  test_webrtc_stream.cpp  video_server_package_consumer_test.cmake.in
tests/package_consumer/: CMakeLists.txt  main.cpp
tests/vcpkg_downstream/: CMakeLists.txt  README.md  vcpkg.json
tools/: video_server_soak_runner.cpp
vcpkg/: fix-ffmpeg-link-keywords.patch  portfile.cmake  vcpkg.json
